# BoustrophedonCellularDecompositionPathPlanning

./: CMakeLists.txt  a-star.hpp  main.cpp  run.sh
bcd_algorithm/include/: bcd.h  common_data.h  cover_planning.h  map_sdk.h  math_utils.h  navigation_message.h  test_function.h  visualization.h
bcd_algorithm/src/: bcd.cpp  common_data.cpp  cover_planning.cpp  map_sdk.cpp  test_function.cpp  visualization.cpp
